--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -23,4 +25,25 @@ html {
 body {
   margin: 0;
   height: 100%;
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.App {
+  text-align: center;
+}
+
+.nav-link{
+  color: black !important;
+}
+
+.navbar-brand{
+  color: black !important;
+}
+
+h1{
+  font-size: 20px !important;
+}
+
+.flex-container{
+  display: flex !important;
 }
