--- a/client/public/style.css
+++ b/client/public/style.css
@@ -57,3 +57,8 @@ select{
   box-shadow: none !important;
   border-color: black !important;
 }
+
+input{
+  margin-top: 10px !important;
+  box-shadow: none !important;
+}
