--- a/client/public/style.css
+++ b/client/public/style.css
@@ -114,6 +114,10 @@ input{
   display: inline;
 }
 
+td, th, tr{
+  text-align: left;
+}
+
 
 /* ============================================================ */
 /* ===============[ Screen Design Change ]=============== */
