--- a/client/public/style.css
+++ b/client/public/style.css
@@ -26,6 +26,7 @@ body {
   margin: 0;
   height: 100%;
   font-family: 'Montserrat', sans-serif !important;
+  overflow-x: hidden !important;
 }
 
 .App {
